# algo

./: CMakeLists.txt  Doxyfile  README.md
benchmark/: CMakeLists.txt  main.cpp
src/: algo.cpp  algo.h  algo_stack.cpp  algo_stack.h  algo_tree.cpp  algo_tree.h  data.cpp  data.h  graph.h  main.cpp  tree.h
tests/: CMakeLists.txt  algo_test.cpp  interval_map_test.cpp  main.cpp  test.cpp  test.h
